--- a/web-app-deploy/package.json
+++ b/web-app-deploy/package.json
@@ -24,6 +24,7 @@
     "qrcode": "^1.2.0",
     "ws": "^5.1.1",
     "sharp": "^0.18.4",
-    "stripe": "^5.4.0"
+    "stripe": "^5.4.0",
+    "sitemap": "^1.13.0"
   }
 }
