--- a/src/apps/apps.manifest.json
+++ b/src/apps/apps.manifest.json
@@ -3,9 +3,9 @@
   { "color":"#000000", "showCartIcon": false, "icon": "flaticon-profile" , "name": "login", "url": "/login.bundle.js", "stage": ["system"], "type": "application", "desktop": false, "size": 200000  },
   { "color":"#ad119e", "showCartIcon": true, "icon": "flaticon-treatments", "name": "treatments", "url": "/treatments.bundle.js", "stage": ["treatments"], "type": "application", "desktop": true, "size": 200000 },
   { "color":"#000000", "showCartIcon": true, "icon": "flaticon-scissors", "name": "bonusCards", "url": "/bonusCards.bundle.js", "stage": ["bonusCards"], "type": "application", "desktop": true, "size": 200000  },
+  { "color":"#000000", "showCartIcon": true, "icon": "flaticon-hand-mirror", "name": "products", "url": "/products.bundle.js", "stage": ["products"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#2c6310", "showCartIcon": true, "icon": "flaticon-light-bulb" , "name": "promotions", "url": "/promotions.bundle.js", "stage": ["promotions"], "type": "application", "desktop": true, "size": 200000   },
   { "color":"#651d1d", "showCartIcon": false, "icon": "flaticon-calendar", "name": "bookings", "url": "/bookings.bundle.js", "stage": ["bookings"], "type": "application", "desktop": true, "size": 200000  },
-  { "color":"#000000", "showCartIcon": true, "icon": "flaticon-shopping-bag", "name": "products", "url": "/products.bundle.js", "stage": ["products"], "type": "application", "desktop": false, "size": 200000  },
   { "color":"#059e8c", "showCartIcon": false, "icon": "flaticon-champagne" , "name": "beautyparties", "url": "/beautyparties.bundle.js", "stage": ["beautyparties"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#ff0000", "showCartIcon": false, "icon": "flaticon-fruit" , "name": "beautycorner", "url": "/beautycorner.bundle.js", "stage": ["beautycorner"], "type": "application", "desktop": true, "size": 200000   },
   { "color":"#20275f", "showCartIcon": false, "icon": "flaticon-fruit-1" , "name": "inandoutgo", "url": "/inandoutgo.bundle.js", "stage": ["inandoutgo"], "type": "application", "desktop": true, "size": 200000   },
@@ -19,5 +19,6 @@
   { "color":"#717171", "showCartIcon": false, "icon": "flaticon-chat" , "name": "reviews", "url": "/reviews.bundle.js", "stage": ["reviews"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#000000", "showCartIcon": false, "icon": "flaticon-question" , "name": "questions", "url": "/questions.bundle.js", "stage": ["questions"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#000000", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "press", "url": "/press.bundle.js", "stage": ["press"], "type": "application", "desktop": true, "size": 200000  },
-  { "color":"#000000", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "blog", "url": "/blog.bundle.js", "stage": ["blog"], "type": "application", "desktop": false, "size": 200000  }
+  { "color":"#000000", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "blog", "url": "/blog.bundle.js", "stage": ["blog"], "type": "application", "desktop": false, "size": 200000  },
+  { "color":"#000000", "showCartIcon": false, "icon": "flaticon-search" , "name": "search", "url": "/search.bundle.js", "stage": ["search"], "type": "application", "desktop": true, "size": 200000  }
 ]
