--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea/
 node_modules/
-web-app-deploy/static/
-web-app-deploy/private/
-web-app-deploy/google/
+web-app-deploy/static/*
+web-app-deploy/private/*
+web-app-deploy/google/*
+web-app-deploy/extras/*
 web-app-deploy/order-qr-codes/*.png
 backup/fb2b86b1ef42eee47e65ce27fc320948/
