--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "handlebars-loader": "^1.5.0",
     "html-webpack-plugin": "^2.28.0",
     "mongodb": "^2.2.33",
+    "mongodb-backup": "^1.6.9",
     "node-fetch": "^1.7.1",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.14.1",
