--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ web-app-deploy/google/*
 web-app-deploy/extras/*
 web-app-deploy/order-qr-codes/*.png
 backup/fb2b86b1ef42eee47e65ce27fc320948/
+src/assets/uploads/*
