--- a/src/apps/apps.manifest.json
+++ b/src/apps/apps.manifest.json
@@ -19,5 +19,5 @@
   { "color":"#717171", "showCartIcon": false, "icon": "flaticon-chat" , "name": "reviews", "url": "/reviews.bundle.js", "stage": ["reviews"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#000000", "showCartIcon": false, "icon": "flaticon-question" , "name": "questions", "url": "/questions.bundle.js", "stage": ["questions"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#000000", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "press", "url": "/press.bundle.js", "stage": ["press"], "type": "application", "desktop": true, "size": 200000  },
-  { "color":"#000000", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "extras", "url": "/extras.bundle.js", "stage": ["extras"], "type": "application", "desktop": false, "size": 200000  }
+  { "color":"#000000", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "blog", "url": "/blog.bundle.js", "stage": ["blog"], "type": "application", "desktop": false, "size": 200000  }
 ]
