--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "in-and-out",
-    "version": "1.3.30",
+    "version": "1.3.41",
     "description": "In&Out web-app",
     "main": "./src/game.js",
     "private": true,
@@ -27,12 +27,14 @@
         "babel-regenerator-runtime": "^6.5.0",
         "bcrypt": "^1.0.3",
         "body-parser": "^1.18.2",
+        "box-node-sdk": "^1.22.0",
         "compression": "^1.7.1",
         "connect-mongo": "^2.0.0",
         "copy-webpack-plugin": "^4.0.1",
         "express": "^4.16.2",
         "express-brute": "^1.0.1",
         "express-brute-mongo": "^1.0.0",
+        "express-fileupload": "^1.0.0-alpha.1",
         "express-session": "^1.15.6",
         "googleapis": "^23.0.0",
         "handlebars": "^4.0.10",
@@ -58,7 +60,10 @@
         "webpack-dev-server": "^2.4.2",
         "webpack-hot-middleware": "^2.21.0",
         "ws": "^5.1.1",
+        "xlsx": "^0.14.0",
         "xml2json": "^0.11.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "pdfreader": "^0.2.5"
+    }
 }
