--- a/web-app-deploy/package.json
+++ b/web-app-deploy/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "box-node-sdk": "^1.22.0",
     "compression": "^1.7.1",
     "express": "^4.16.2",
     "express-brute": "^1.0.1",
     "express-brute-mongo": "^1.0.0",
+    "express-fileupload": "^0.4.0",
     "body-parser": "^1.18.2",
     "googleapis": "^23.0.0",
     "express-session": "^1.15.6",
