--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "in-and-out",
-    "version": "1.3.66",
+    "version": "1.3.68",
     "description": "In&Out web-app",
     "main": "./src/game.js",
     "private": true,
     "scripts": {
         "start": "NODE_ENV=development node_modules/nodemon/bin/nodemon.js ./web-app-deploy/server.js --watch web-app-deploy",
         "build": "webpack --config webpack/webpack.config.build.js --env.patch",
-        "backup": "node ./backup/backup.js"
+        "backup": "node ./backup/backup.js",
+        "clone": "node ./backup/clone.js"
     },
     "repository": {
         "type": "git",
@@ -42,6 +43,7 @@
         "html-webpack-plugin": "^2.28.0",
         "mongodb": "^2.2.33",
         "mongodb-backup": "^1.6.9",
+        "mongodb-restore": "^1.6.2",
         "node-fetch": "^1.7.1",
         "nodemailer": "^4.4.1",
         "nodemon": "^1.14.1",
