--- a/src/apps/apps.manifest.json
+++ b/src/apps/apps.manifest.json
@@ -21,5 +21,5 @@
   { "color":"#56ab2a", "showCartIcon": false, "icon": "flaticon-question" , "name": "questions", "url": "/questions.bundle.js", "stage": ["questions"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#56ab2a", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "press", "url": "/press.bundle.js", "stage": ["press"], "type": "application", "desktop": true, "size": 200000  },
   { "color":"#56ab2a", "showCartIcon": false, "icon": "flaticon-antenna" , "name": "blog", "url": "/blog.bundle.js", "stage": ["blog"], "type": "application", "desktop": false, "size": 200000  },
-  { "color":"#56ab2a", "showCartIcon": false, "icon": "flaticon-search" , "name": "search", "url": "/search.bundle.js", "stage": ["search"], "type": "application", "desktop": true, "size": 200000  }
+  { "color":"#56ab2a", "showCartIcon": false, "icon": "flaticon-search" , "name": "search", "url": "/search.bundle.js", "stage": ["search"], "type": "application", "desktop": false, "size": 200000  }
 ]
