--- a/src/assets/fonts/font.manifest.json
+++ b/src/assets/fonts/font.manifest.json
@@ -1,4 +1,5 @@
 [
+  { "type": "font", "stage": "fonts", "url": "/assets/fonts/burst-my-bubble/burstmybubble.ttf", "name" : "burstmybubble" },
   { "type": "font", "stage": "fonts", "url": "/assets/fonts/beauty/Flaticon.ttf", "name" : "beauty" },
   { "type": "font", "stage": "fonts", "url": "/assets/fonts/font-awesome/fontawesome-webfont.ttf", "name" : "fontawesome" },
   { "type": "font", "stage": "fonts", "url": "/assets/fonts/HelveticaNeueLTStd-Bd/HelveticaNeueLTStd-Bd.ttf", "name" : "HelveticaBold" },
