--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "in-and-out",
-    "version": "1.3.118",
+    "version": "1.3.150",
     "description": "In&Out web-app",
     "main": "./src/game.js",
     "private": true,
@@ -65,11 +65,12 @@
         "webpack-dev-server": "^3.1.11",
         "webpack-hot-middleware": "^2.21.0",
         "ws": "^5.1.1",
-        "xlsx": "^0.14.0",
+        "xlsx": "^0.14.5",
         "xml2json": "^0.11.0"
     },
     "dependencies": {
         "http-serve": "^1.0.1",
-        "pdfreader": "^0.2.5"
+        "pdfreader": "^0.2.5",
+        "tiny-slider": "^2.9.2"
     }
 }
