--- a/web-app-deploy/package.json
+++ b/web-app-deploy/package.json
@@ -23,12 +23,14 @@
     "mongodb": "^2.2.33",
     "nodemailer": "^4.4.1",
     "pdfkit": "^0.8.3",
+    "pdftoimage": "^1.0.0",
     "qrcode": "^1.2.0",
     "ws": "^5.1.1",
     "sharp": "^0.18.4",
     "stripe": "^5.4.0",
     "striptags": "^3.1.1",
     "sitemap": "^1.13.0",
-    "spider-detector": "^1.0.18"
+    "spider-detector": "^1.0.18",
+    "xlsx": "^0.14.5"
   }
 }
