--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+.vscode/
 node_modules/
 web-app-deploy/static/*
 web-app-deploy/private/*
@@ -12,3 +13,4 @@ backup_13-10-2019
 scripts/*.csv
 src/assets/uploads/*
 scripts/temp
+.DS_Store
