--- a/web-app-deploy/package.json
+++ b/web-app-deploy/package.json
@@ -9,7 +9,6 @@
   "author": "massicattaneo",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.3",
     "box-node-sdk": "^1.22.0",
     "compression": "^1.7.1",
     "express": "^4.16.2",
@@ -26,11 +25,12 @@
     "pdftoimage": "^1.0.0",
     "qrcode": "^1.2.0",
     "ws": "^5.1.1",
-    "sharp": "^0.18.4",
     "stripe": "^6.36.0",
     "striptags": "^3.1.1",
     "sitemap": "^1.13.0",
     "spider-detector": "^1.0.18",
-    "xlsx": "^0.14.5"
+    "xlsx": "^0.14.5",
+    "bcrypt": "^5.0.1",
+    "sharp": "^0.28.3"
   }
 }
