--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "in-and-out",
-    "version": "1.3.241",
+    "version": "1.3.254",
     "description": "In&Out web-app",
     "main": "./src/game.js",
     "private": true,
@@ -49,6 +49,7 @@
         "nodemon": "^1.18.9",
         "open": "0.0.5",
         "pdf-image": "^2.0.0",
+        "pdf-parse": "^1.1.1",
         "pdf2img": "^0.5.0",
         "pdfkit": "^0.8.3",
         "pdftoimage": "^1.0.0",
