--- a/web-app-deploy/package.json
+++ b/web-app-deploy/package.json
@@ -28,9 +28,10 @@
     "stripe": "^6.36.0",
     "striptags": "^3.1.1",
     "sitemap": "^1.13.0",
-    "spider-detector": "^1.0.18",
     "xlsx": "^0.14.5",
     "bcrypt": "^5.0.1",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "spider-detector": "^1.0.18",
+    "pdf-parse": "^1.1.1"
   }
 }
