--- a/package.json
+++ b/package.json
@@ -1,77 +1,59 @@
 {
-    "name": "in-and-out",
-    "version": "1.3.254",
-    "description": "In&Out web-app",
-    "main": "./src/game.js",
-    "private": true,
-    "scripts": {
-        "start": "NODE_ENV=development node_modules/nodemon/bin/nodemon.js ./web-app-deploy/server.js --watch web-app-deploy",
-        "build": "webpack --config webpack/webpack.config.build.js --env.patch",
-        "backup": "node ./backup/backup.js",
-        "clone": "node ./backup/clone.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/massicattaneo/in-and-out.git"
-    },
-    "author": "Massimiliano Cattaneo",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/massicattaneo/in-and-out/issues"
-    },
-    "homepage": "https://github.com/massicattaneo/in-and-out#readme",
-    "devDependencies": {
-        "babel-core": "^6.22.1",
-        "babel-loader": "^6.2.10",
-        "babel-polyfill": "^6.23.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-regenerator-runtime": "^6.5.0",
-        "bcrypt": "^3.0.6",
-        "body-parser": "^1.18.2",
-        "box-node-sdk": "^1.22.0",
-        "compression": "^1.7.1",
-        "connect-mongo": "^2.0.0",
-        "copy-webpack-plugin": "^4.0.1",
-        "express": "^4.16.2",
-        "express-brute": "^1.0.1",
-        "express-brute-mongo": "^1.0.0",
-        "express-fileupload": "^1.0.0-alpha.1",
-        "express-session": "^1.15.6",
-        "googleapis": "^23.0.0",
-        "handlebars": "^4.0.10",
-        "handlebars-loader": "^1.5.0",
-        "html-webpack-plugin": "^2.28.0",
-        "mongodb": "^2.2.33",
-        "mongodb-backup": "^1.6.9",
-        "mongodb-restore": "^1.6.2",
-        "node-fetch": "^1.7.1",
-        "nodemailer": "^4.4.1",
-        "nodemon": "^1.18.9",
-        "open": "0.0.5",
-        "pdf-image": "^2.0.0",
-        "pdf-parse": "^1.1.1",
-        "pdf2img": "^0.5.0",
-        "pdfkit": "^0.8.3",
-        "pdftoimage": "^1.0.0",
-        "qrcode": "^1.2.0",
-        "raw-loader": "^0.5.1",
-        "sitemap": "^1.13.0",
-        "spider-detector": "^1.0.18",
-        "stripe": "^6.36.0",
-        "striptags": "^3.1.1",
-        "webpack": "^3.5.5",
-        "webpack-auto-inject-version": "^1.1.0",
-        "webpack-dev-middleware": "^2.0.1",
-        "webpack-dev-server": "^3.1.11",
-        "webpack-hot-middleware": "^2.21.0",
-        "ws": "^5.1.1",
-        "xlsx": "^0.14.5",
-        "xml2json": "^0.11.0"
-    },
-    "dependencies": {
-        "http-serve": "^1.0.1",
-        "pdfreader": "^0.2.5",
-        "sharp": "^0.31.3",
-        "tiny-slider": "^2.9.2"
-    }
+  "name": "in-and-out",
+  "version": "1.3.254",
+  "description": "In&Out web-app",
+  "main": "./src/game.js",
+  "private": true,
+  "scripts": {
+    "server": "env TZ='Europe/Amsterdam' node ./web-app-deploy/server.js",
+    "start": "NODE_ENV=development node_modules/nodemon/bin/nodemon.js ./web-app-deploy/server.js --watch web-app-deploy",
+    "build": "webpack --config webpack/webpack.config.build.js --env.patch",
+    "backup": "node ./backup/backup.js",
+    "clone": "node ./backup/clone.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/massicattaneo/in-and-out.git"
+  },
+  "author": "Massimiliano Cattaneo",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/massicattaneo/in-and-out/issues"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/web-app-deploy/backup-db/**"
+    ]
+  },
+  "homepage": "https://github.com/massicattaneo/in-and-out#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.18.2",
+    "box-node-sdk": "^1.22.0",
+    "compression": "^1.7.1",
+    "connect-mongo": "^2.0.0",
+    "express": "^4.16.2",
+    "express-brute": "^1.0.1",
+    "express-brute-mongo": "^1.0.0",
+    "express-fileupload": "^0.4.0",
+    "express-session": "^1.15.6",
+    "googleapis": "^23.0.0",
+    "mongodb": "^2.2.33",
+    "mongodb-backup": "^1.6.9",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^4.4.1",
+    "nodeJs-zip": "^1.0.4",
+    "nodemon": "^2.0.21",
+    "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.8.3",
+    "pdftoimage": "^1.0.0",
+    "qrcode": "^1.2.0",
+    "sharp": "^0.28.3",
+    "sitemap": "^1.13.0",
+    "spider-detector": "^1.0.18",
+    "stripe": "^6.36.0",
+    "striptags": "^3.1.1",
+    "ws": "^5.1.1",
+    "xlsx": "^0.14.5"
+  }
 }
