--- a/web-app-deploy/package.json
+++ b/web-app-deploy/package.json
@@ -20,7 +20,10 @@
     "express-session": "^1.15.6",
     "connect-mongo": "^2.0.0",
     "mongodb": "^2.2.33",
+    "mongodb-backup": "^1.6.9",
     "nodemailer": "^4.4.1",
+    "node-schedule": "^2.1.1",
+    "nodeJs-zip": "^1.0.4",
     "pdfkit": "^0.8.3",
     "pdftoimage": "^1.0.0",
     "qrcode": "^1.2.0",
